<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">AI咨询师</string>
    <string name="home">首页</string>
    <string name="test_nickname">许三多</string>
    <string name="test_team">中华人民共和国中华人民共和国中华人民共和国中华人民共和国中华人民共和国中华人民共和国</string>
    <string name="message">消息</string>
    <string name="me">我的</string>
    <string name="local_one_step_login">本机号码一键登录</string>
    <string name="sort_type_talk">倾诉吐槽</string>
    <string name="sort_type_theme_talk">主题对话</string>
    <string name="sort_type_what">咨询助理</string>
    <string name="sort_type_test">测评问卷</string>
    <string name="sort_type_exercise">成长训练</string>
    <string name="sort_type_listening">正念冥想</string>
    <string name="sort_type_see">视频集锦</string>
    <string name="sort_type_read">心理文库</string>
    <string name="sort_type_study">思政文库</string>
    <string name="sort_type_hot_call">全国心理服务热线</string>
    <string name="xt_hint_title">小密温馨提示：</string>
    <string name="xt_hint_content">如果你正处于危机情况，比如产生了自杀或自伤的念头，你可以拨打全国心理援助热线寻求援助。</string>
    <string name="read_more">了解更多</string>
    <string name="tab_task">任务</string>
    <string name="tab_report">报告</string>
    <string name="tab_notice">通知</string>
    <string name="quiz">提问</string>
    <string name="collect">收藏</string>
    <string name="me_quiz">我的提问</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_history">历史记录</string>
    <string name="me_time_minute">累计分钟</string>
    <string name="me_time_day">累计天数</string>
    <string name="me_time_continuation_day">连续天数</string>
    <string name="me_test">测评问卷</string>
    <string name="me_test_history">我的测试</string>
    <string name="me_exercise">成长训练</string>
    <string name="me_listening">正念冥想</string>
    <string name="me_see">视频集锦</string>
    <string name="me_read">心理文库</string>
    <string name="me_study">思政文库</string>
    <string name="me_heart_box">心灵筒</string>
    <string name="me_heart_test_report">心理测评报告</string>
    <string name="me_heart_safe_report">心理健康报告</string>
    <string name="me_help_back">帮助与反馈</string>
    <string name="me_setting">设置</string>
    <string name="me_info">个人信息</string>
    <string name="me_select_avatar">选择头像</string>
    <string name="set_account_safe">账户安全</string>
    <string name="set_info">个人资料</string>
    <string name="set_notice">通知设置</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_privacy_policy">隐私政策</string>
    <string name="set_about_ai">关于我们</string>
    <string name="help_back">帮助中心</string>
    <string name="audio_instruct">语音指令</string>
    <string name="common_problem">常见问题</string>
    <string name="safe_mobile">手机号码</string>
    <string name="safe_wechat">微信号</string>
    <string name="safe_bind">去绑定</string>
    <string name="safe_QQ">QQ</string>
    <string name="safe_password">密友密码</string>
    <string name="info_avatar">头像</string>
    <string name="info_nickname">昵称</string>
    <string name="info_name">真实姓名</string>
    <string name="info_name_pinyin">姓名全拼</string>
    <string name="info_team">所属组织</string>
    <string name="info_user_id">用户ID</string>
    <string name="info_birthday">出生年月</string>
    <string name="info_address">籍贯</string>
    <string name="info_nationality">民族</string>
    <string name="info_sex">性别</string>
    <string name="info_mobile">手机号码</string>
    <string name="info_schooling">学历</string>
    <string name="info_marriage">婚姻状况</string>
    <string name="info_children">子女状况</string>
    <string name="info_politic_countenance">政治面貌</string>
    <string name="info_join_j">入职(伍)时间</string>
    <string name="info_class">部门</string>
    <string name="info_level">职级</string>
    <string name="info_hobby">兴趣爱好</string>
    <string name="info_like">最需要的支持</string>
    <string name="box_title">心灵筒</string>
    <string name="share">分享</string>
    <string name="finishServiceTitle">确认退出当前对话吗？</string>
    <string name="finishDownlaodApk">已在Wifi连接下，为您下载好新版本，是否现在安装？</string>
    <string name="finishToolTitle">确认退出当前训练吗？</string>
    <string name="finishServiceHint">感谢您的咨询，希望下次还可以为您服务</string>
    <string name="order">订单</string>
    <string name="realname_authentication">实名认证</string>
    <string name="please_realname">请输入身份证里的姓名</string>
    <string name="please_idcard">请输入身份证号</string>
    <string name="authentication_hint">查看认证须知</string>
    <string name="permission_setting">权限设置</string>
    <string name="permission_go_setting">去设置</string>
    <string name="face_discern">脸部识别</string>
    <string name="start_face_discern">开始识别</string>
    <string name="please_face_discern">请进行面部识别，以确保是本人操作</string>
    <string name="permission_please_auth_hint">您还没有授予权限，请先去设置页面授予权限。</string>
    <string name="perfect_infomation">完善信息</string>
    <string name="leapfrog">跳过</string>
    <string name="i_chooseed">我选好了</string>
    <string name="app_id">ec8b0856</string>
    <string name="sort">分类</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传联系人/词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string name="face_model_delete">人脸模型删除</string>
    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>
    <string name="valid_fail_organ_id">无效的机构编码</string>
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <string name="select_metrics">Select metrics</string>
    <string name="expressions">Expressions( 表露)</string>
    <string name="emotions">Emotions(情绪)</string>
    <string name="measurements">Measurements(测量)</string>
    <string name="expressions_smile">Smile(微笑)</string>
    <string name="expressions_brow_raise">Brow Raise(眉毛抬升)</string>
    <string name="expressions_brow_furrow">Brow Furrow(眉沟)</string>
    <string name="expressions_blink">Blink:</string>
    <string name="expressions_blink_rate">Blink Rate:</string>
    <string name="expressions_nose_wrinkle">Nose Wrinkle(鼻子褶皱)</string>
    <string name="expressions_upper_lip_raise">Upper Lip Raise(上唇隆起)</string>
    <string name="expressions_mouth_open">Mouth Open(张口)</string>
    <string name="expressions_eye_closure">Eye Closure(眼睛闭上)</string>
    <string name="expressions_cheek_raise">Cheek Raise(面部提高)</string>
    <string name="expressions_yawn">Yawn(打哈欠)</string>
    <string name="processing_frame_rate">Processing frame rate</string>
    <string name="insufficient_permissions">Insufficient Permissions</string>
    <string name="permissions_camera_needed_explanation">This app requires the permission to access your camera to be able to gather facial images for processing. No video is saved or used other than for immediate emotion processing.</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
</resources>