<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.me.CollectActivity">

    <com.thfw.robotheart.view.TitleRobotView
        android:id="@+id/titleRobotView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:trv_centerText="@string/me_collect"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/TabLayoutStyle"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleRobotView">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_see" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_exercise" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_read" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_study" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1px"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorRobotFore"
        app:layout_constraintBottom_toBottomOf="@id/tabLayout" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>