<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_5dp"
                    android:text="@string/processing_frame_rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_size" />

                <TextView
                    android:id="@+id/processing_frame_rate_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="@dimen/_5dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_size" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/processing_frame_rate_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="30"
                android:min="5"
                android:paddingTop="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp"
                android:paddingLeft="@dimen/_15dp"
                android:paddingRight="@dimen/_15dp"
                android:progressDrawable="@drawable/seek_bar"
                android:thumb="@drawable/seek_thumb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/select_metrics"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_size" />

            <RadioGroup
                android:id="@+id/metrics_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp">

                <RadioButton
                    android:id="@+id/emotions_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:clickable="true"
                    android:text="@string/emotions"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/expressions_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:buttonTint="@color/colorPrimary"
                    android:clickable="true"
                    android:text="@string/expressions"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/measurements_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:buttonTint="@color/colorPrimary"
                    android:clickable="true"
                    android:text="@string/measurements"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>